project-lms-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: horang-registry.kr.ncr.ntruss.com/lms-horang-frontend:latest
          name: horang-registry
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
