project-lms-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    port: 80
    protocol: TCP
    targetPort: 3000
    nodePort: 33000
  selector:
    app: frontend
  type: NodePort
